# squackit

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: release.yml
.lackpy/: config.toml
docs/: agent-system-prompt.md  architecture.md  configuration.md  index.md  prompts.md  quickstart.md  resources.md  tools.md
docs/proposals/: 2026-06-04-response-type-improvements.md
docs/superpowers/plans/: 2026-04-10-phase1-handoff.md  2026-04-10-squawkit-extraction.md  2026-04-11-phase3-pluckit-rewire.md  2026-04-12-cli-tool-exposure.md  2026-04-12-pluckit-tool-integration.md  2026-04-12-session-handoff.md  2026-04-16-session-handoff.md  2026-04-26-named-fts-collections.md  2026-04-27-kibitzer-fts-doc-retrieval.md
docs/superpowers/skills/exploring-unfamiliar-code/: SKILL.md
docs/superpowers/skills/exploring-unfamiliar-docs/: SKILL.md
docs/superpowers/skills/pluck-chains/: SKILL.md
docs/superpowers/skills/refactoring-with-squackit/: SKILL.md
docs/superpowers/skills/using-squackit/: SKILL.md
docs/superpowers/specs/: 2026-04-10-squawkit-design.md  2026-04-12-cli-tool-exposure-design.md  2026-04-12-pluckit-tool-integration-design.md  2026-04-16-training-data-pipeline-design.md  2026-04-26-named-fts-collections-design.md
scripts/: EXPERIMENT_LOG.md  benchmark_models.py  cascade_prototype.py  combo_eval.py  generate_examples.py  grid_generate_examples.py  hard_tasks.py  harvest_grid.py  iterative_eval.py  model_cards.py  multiline_tasks.py  qm_retrieval_eval.py  quartermaster_eval.py  selector_eval.py
scripts/hard_task_results/: deepseek-coder-v2_16b.json  qwen2.5-coder_0.5b.json  qwen2.5-coder_3b.json  qwen2.5-coder_7b.json  qwen3.5_2b.json  qwen3_8b.json  scoring_input.json  summary.json
scripts/iterative_results/: summary.json  summary_deepseek_plain.json  summary_distilled_xml.json  summary_editor_3b_7b.json  summary_fulldocs.json  summary_plaintext_3b7b.json
scripts/model_card_results/: codegemma_2b.json  codegemma_7b.json  deepseek-coder-v2_16b.json  deepseek-llm_7b.json  gemma_latest.json  glm4_9b.json  granite-code_3b.json  granite3.1-dense_2b.json  granite3.3_2b.json  llama2-uncensored_7b.json  llama3.2-vision_11b.json  llama3.2_1b.json  llama3.2_latest.json  phi3_latest.json  phi4-mini_latest.json  qwen2.5-coder_0.5b.json  qwen2.5-coder_1.5b.json  qwen2.5-coder_3b.json  qwen2.5-coder_7b.json  qwen2.5_1.5b.json  qwen2.5_3b.json  qwen2.5_7b.json  qwen2_latest.json  qwen3.5_0.8b.json  qwen3.5_2b.json  qwen3.5_4b.json  qwen3.5_9b.json  qwen3_0.6b.json  qwen3_8b.json  smollm2_latest.json  summary.json
scripts/multiline_results/: deepseek-coder-v2_16b.json  qwen2.5-coder_3b.json  qwen2.5-coder_7b.json  qwen3.5_2b.json  qwen3_8b.json  summary.json
scripts/quartermaster_results/: retrieval_summary.json  summary.json
scripts/selector_results/: summary.json
squackit/: __init__.py  __main__.py  cli.py  db.py  defaults.py  formatting.py  lackpy_integration.py  prompts.py  runtime.py  server.py  session.py  tool_config.py  tools.py  workflows.py
squackit/data/: examples.json
squawkit/: __init__.py  __main__.py  db.py  defaults.py  formatting.py  prompts.py  server.py  session.py  workflows.py
tests/: conftest.py  test_cli_tools.py  test_config_consumption.py  test_defaults.py  test_formatting_json.py  test_fts_root.py  test_prompts.py  test_resources.py  test_runtime_config.py  test_session.py  test_smoke.py  test_tool_config.py  test_tools.py  test_truncation.py  test_workflows.py
tests/fixtures/: has_call_filter.py
